chore: resync with live API and add typed sighting search filters